# MarkDuplicatesRust

./: .gitignore  .gitmodules  Cargo.toml  READMD.md  README.md
macro_sup/: Cargo.toml
macro_sup/examples/: ex1.rs
macro_sup/src/: lib.rs
src/: lib.rs  main.rs
src/cmdline/: cli.rs
src/hts/: coordinate_sorted_pair_info_map.rs  duplicate_scoring_strategy.rs  header.rs  metrics.rs  mod.rs
src/hts/utils/: file_append_stream_lru_cache.rs  format_util.rs  histogram.rs  mod.rs  murmur3.rs  sorting_collection.rs  sorting_long_collection.rs
src/markdup/: estimate_library_complexity.rs  markduplicates.rs  markduplicates_helper.rs  mod.rs  umi_utils.rs
src/markdup/utils/: library_id_generator.rs  mod.rs  optical_duplicate_finder.rs  physical_location.rs  read_ends.rs  read_ends_for_mark_duplicates.deprecated  read_ends_for_mark_duplicates.rs  read_ends_for_mark_duplicates_with_barcodes.rs  read_ends_md_map.rs  read_name_parser.rs  representative_read_indexer.rs
src/tests/: help_me.rs  mod.rs
src/utils/: errors.rs  graph_utils.rs  logging.rs  mod.rs
tests/: markdup.rs
tests/common/: mod.rs
