[package]
name = "markdup_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
log4rs = "1.3.0"
regex = "1.10.4"
rust-htslib = { path = "./deps/rust-htslib" }
serde = { version = "1.0.197", features = ["derive"] }
