workspace = { members = ["macro_sup"] }
[package]
name = "markdup_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
bio-types = "1.0.1"
clap = { version = "4.5.3", features = ["derive"] }
log = "0.4.21"
log4rs = "1.3.0"
lru = "0.12.3"
regex = "1.10.4"
rust-htslib = { path = "./deps/rust-htslib" }
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.58"
tikv-jemalloc-ctl = "0.5.4"
tikv-jemallocator = "0.5.4"
macro_sup = { path = "./macro_sup" }
serde_json = { version = "1.0.115", features = ["std"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units=1
lto=true
